--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,13 @@ html, body
     font-family: Montserrat;
     font-size: calc(12px + (16 - 12) * ((100vw - 320px) / (1920 - 320)));
     color: #333;
+    overflow-x: hidden;
 }
 
 .wrapper
 {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #E5E5E5;
 }
 
@@ -37,6 +38,9 @@ html, body
     background-color: #FF9900;
     border: 0;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .button-span
@@ -52,18 +56,33 @@ html, body
     font-style: normal;
     font-weight: 400;
     font-size: 1rem;
-    line-height: 20px;
+    line-height: calc(24px + (32 - 24) * ((100vw - 320px) / (1920 - 320)));
 }
 
 .page-title
 {
     font-size: 3rem;
-    line-height: 59px;
+    line-height: calc(44px + (59 - 44) * ((100vw - 320px) / (1920 - 320)));
 }
 
 .link
 {
     text-decoration: none;
+}
+
+.img-block
+{
+    /* position: relative; */
+}
+
+.img-block__img
+{
+    /* position: absolute;
+    top: 0;
+    left: 0; */
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 /* Header styles */
@@ -148,20 +167,22 @@ html, body
     justify-content: center;
     align-items: center;
     z-index: 2;
+    padding: 2px;
+    transition: all .3s ease;
 }
 
 .header-button__search-icon
 {
     fill: #333;
+    transition: all .3s ease;
+}
+
+.header-button__search-icon path
+{
+    transition: all .3s ease;
 }
 
 .header-navbar__header-button:hover .header-button__search-icon
-{
-    fill: #FF9900;
-    stroke: #FF9900;
-}
-
-/* .header-navbar__header-button:hover .header-button__search-icon rect
 {
     fill: #FF9900;
 }
@@ -169,7 +190,22 @@ html, body
 .header-navbar__header-button:hover .header-button__search-icon path
 {
     stroke: #FF9900;
-} */
+} 
+
+.header-navbar__header-button:active .header-button__search-icon
+{
+    fill: #333;
+}
+
+.header-navbar__header-button:active .header-button__search-icon path
+{
+    stroke: #333;
+} 
+
+.header-navbar__header-button:active
+{
+    border: 1px solid #FF9900;
+}
 
 .header-button
 {
@@ -181,20 +217,108 @@ html, body
 
 }  
 
-
-.swiper
+.header-searchbar 
 {
-
+    display: none;
+    width: 100%;
+    max-width: 539px;
+    max-height: 60px;
 }
 
-.swiper-wrapper
+.search-bar
 {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 13px 16px 32px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.12);
+    border-radius: 16px;
+}
 
+.search-bar .header-button__search-icon
+{
+    fill: #FF9900;
+}
+
+.search-bar__inputs
+{
+    width: 100%;
+    max-width: 412px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 14px 0 0;
+}
+
+.search-bar__input
+{
+    font-weight: 500;
+    font-size: 1.125rem;
+    line-height: 22px;
+    color: #ADADAD;
+    border: 0;
+    position: relative;
+    margin: 0 0 10px 0;
+}
+
+.search-bar__input:focus
+{
+    outline: 0;
+}
+
+.search-bar__input::placeholder
+{
+    font-weight: 500;
+    font-size: 1.125rem;
+    line-height: 22px;
+    color: #ADADAD;
+}
+
+.search-bar__underline
+{
+    height: 1px;
+    width: 100%;
+    background-color: #DCDCDC;
+}
+
+.header-searchbar__header-button
+{
+    justify-self: end;
+    background-color: transparent;
+    border: 0;
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    padding: 2px;
+    transition: all .3s ease; 
+}
+
+#search
+{
+    margin: 0 20px 0 0;
+}
+
+.swiper-container
+{
+    width: 100%;
+    position: relative; 
 }
 
 .swiper__order-block
 {
-
+    position: absolute;
+    left: 80px;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    pointer-events: none;
 }
 
 .order-block
@@ -204,22 +328,180 @@ html, body
 
 .order-block__title
 {
-
+    max-width: 837px;
+    font-weight: 800;
+    font-size: 4.375rem;
+    line-height: calc(50px + (85 - 50) * ((100vw - 320px) / (1920 - 320)));
+    color: #FFFFFF;
+    margin: 0 0 calc(18px + (24 - 18) * ((100vw - 320px) / (1920 - 320))) 0;
 }
 
 .order-block__article
 {
-
+    max-width: 790px;
+    font-weight: 700;
+    font-size: 1.5rem;
+    line-height: calc(22px + (29 - 22) * ((100vw - 320px) / (1920 - 320)));
+    color: #FFFFFF;
+    margin: 0 0 calc(60px + (90 - 60) * ((100vw - 320px) / (1920 - 320))) 0;
 }
 
 .order-block__button
 {
+    padding: 24.83px 36.88px;
+    width: calc(220px + (280 - 220) * (100vw - 320px) / (1920 - 320));
+    height: calc(60px + (78 - 60) * (100vw - 320px) / (1920 - 320));
+}
+
+.order-block__button > .button-span
+{
+    font-weight: 700;
+    font-size: 1.46613125rem;
+    line-height: 29px;
+}
+
+.swiper
+{
+    width: 100%;
+    height: 620px;
+}
+
+.swiper-wrapper
+{
 
 }
 
-.button
+.swiper-pagination
+{
+    max-width: 93px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 0 calc(16px + (24 - 16) * ((100vw - 320px) / (1920 - 320))) 50%;
+    transform: translateX(-50%);
+}
+
+span.swiper-pagination-bullet
+{
+    width: 15px;
+    height: 15px;
+    background-color: #fff;
+    /* margin: 0 0 0 0; */
+}
+
+/* span.swiper-pagination-bullet:not(:last-child)
+{
+    margin: 0 20px 0 0;
+} */
+
+/* Main styles */
+.main
+{
+    padding: 0 20px;
+}
+
+.content-block
+{
+    margin: calc(55px + (100 - 55) * ((100vw - 320px) / (1920 - 320))) auto 0 auto;
+}
+
+.about
 {
 
+}
+
+.content-block__title
+{
+
+}
+
+.about .content-block__title
+{
+    margin: 0 0 calc(18px + (20 - 18) * ((100vw - 320px) / (1920 - 320))) 0;
+}
+
+.content-block__article
+{
+
+}
+
+.about .content-block__article
+{
+    max-width: 1235px;
+    margin: 0 0 calc(38px + (50 - 38) * ((100vw - 320px) / (1920 - 320))) 0;
+}
+
+.content-block__content-items
+{
+    height: calc(400px + (622 - 400) * ((100vw - 320px) / (1920 - 320)));
+    display: flex;
+    align-items: center;
+    column-gap: calc(24px + (32 - 24) * ((100vw - 320px) / (1920 - 320)));
+}
+
+.content-items
+{
+
+}
+
+.about-items
+{
+
+}
+
+.content-items__content-item
+{
+
+}
+
+.content-item
+{
+
+}
+
+.about-item
+{
+    height: 100%;
+    flex: 1 0 auto;
+    position: relative;
+    width: calc(400px + (868 - 400) * ((100vw - 320px) / (1920 - 320)));
+    max-width: 868px;
+}
+
+.about-item__background
+{
+
+}
+
+.about-item__description
+{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.item-description
+{
+
+}
+
+.item-description__article
+{
+    max-width: 454px;
+    color: #fff;
+}
+
+.item-description__button
+{
+    background-color: transparent;
+    border: 3px solid #FF9900;
+    padding: 20px 38px;
+    width: calc(150px + (175 - 150) * ((100vw - 320px) / (1920 - 320)));
+    height: calc(55px + (60 - 55) * ((100vw - 320px) / (1920 - 320)));
 }
 
 .button-span
@@ -227,20 +509,74 @@ html, body
 
 }
 
-.swiper-slide
+.benefits-items
+{
+    height: 100%;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.benefits-items__benefit-item   /* Добиться адаптивности каждой карточки */
+{
+    flex: 0 1 auto;
+    background-color: #fff;
+    border: 1px solid #CACACA;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: calc(20px + (65 - 20) * ((100vw - 320px) / (1920 - 320))) calc(40px + (118 - 40) * ((100vw - 320px) / (1920 - 320))) calc(20px + (65 - 20) * ((100vw - 320px) / (1920 - 320))) calc(18px + (60 - 18) * ((100vw - 320px) / (1920 - 320)));
+    max-height: 295px;
+    /* height: calc(240px + (295 - 240) * ((100vw - 320px) / (1920 - 320))); */
+}
+
+.benefit-item
 {
 
 }
 
-.swiper-pagination
+.benefit-item__icon
 {
-
+    flex: 1 0 auto;
+    width: calc(100px + (190 - 100) * ((100vw - 320px) / (1920 - 320)));
+    height: calc(80px + (165 - 80) * ((100vw - 320px) / (1920 - 320)));
+    margin: 0 calc(25px + (50 - 25) * ((100vw - 320px) / (1920 - 320))) 0 0;
 }
 
-/* Main styles */
+.benefit-item__description
+{
+    display: flex;
+    flex-direction: column;
+}
+
+.benefit-item__title
+{
+    font-size: 1.5rem;
+    line-height: calc(22px + (29 - 22) * ((100vw - 320px) / (1920 - 320)));
+    margin: 0 0 8px 0;
+}
+
+.benefit-item__article
+{
+    max-width: 450px;
+}
 
 /* Footer styles */
 
 /* Media queries */
 
 /* Keyframes */
+@media(max-width: 1000px)
+{
+    .header-navbar
+    {
+        display: none;
+    }
+
+    .header-searchbar
+    {
+        display: flex;
+        margin: 0 0 0 20px;
+    }
+}
