--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,17 @@ html, body
 {
     display: flex;
     align-items: center;
+    transition: opacity 1.2s ease;
+}
+
+/* .navbar-outed
+{
+    animation: slide-down .35s cubic-bezier(.09,.64,.62,.55) forwards;
+} */
+
+.header-navbar.opened
+{
+    animation: slide-up .4s cubic-bezier(.09,.64,.62,.55) forwards;
 }
 
 .header-navbar__header-links
@@ -223,7 +234,19 @@ html, body
     width: 100%;
     max-width: 539px;
     max-height: 60px;
+    margin: 0 0 0 20px;
+    transition: opacity 1.2s ease;
 }
+
+.header-searchbar.opened
+{
+    animation: slide-left .55s cubic-bezier(.09,.64,.62,.55) forwards;
+}
+
+/* .searchbar-outed
+{
+    animation: slide-right .35s cubic-bezier(.09,.64,.62,.55) forwards;
+} */
 
 .search-bar
 {
@@ -253,6 +276,7 @@ html, body
 
 .search-bar__input
 {
+    max-height: 17px;
     font-weight: 500;
     font-size: 1.125rem;
     line-height: 22px;
@@ -567,16 +591,51 @@ span.swiper-pagination-bullet
 /* Media queries */
 
 /* Keyframes */
-@media(max-width: 1000px)
-{
-    .header-navbar
+@keyframes slide-left {
+    0%
     {
-        display: none;
+        transform: translateX(120px);
+        opacity: 0;
     }
-
-    .header-searchbar
+    100%
     {
-        display: flex;
-        margin: 0 0 0 20px;
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+@keyframes slide-right {
+    0%
+    {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+    100%
+    {
+        transform: translateX(120px);
+        opacity: 0;
+    }
+}
+@keyframes slide-down {
+    0% 
+    {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    100%
+    {
+        transform: translateY(40px);
+        opacity: 0;
+    }
+}
+@keyframes slide-up {
+    0% 
+    {
+        transform: translateY(40px);
+        opacity: 0;
+    }
+    100%
+    {
+        transform: translateY(0px);
+        opacity: 1;
     }
 }
